force-app/main/default/objects/ssot__GiftEntry__dlm/fields/ssot__GiftBatchId__c.field-meta.xml
<CustomField>
    <fullName>ssot__GiftBatchId__c</fullName>
    <label>Gift Batch</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GiftBatchId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>