force-app/main/default/objects/ssot__GiftEntry__dlm/fields/ssot__GiftCommitmentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__GiftCommitmentId__c</fullName>
    <label>Gift Commitment</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GiftCommitmentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>