force-app/main/default/objects/ssot__GiftEntry__dlm/fields/ssot__GiftDesignation2Amount__c.field-meta.xml
<CustomField>
    <fullName>ssot__GiftDesignation2Amount__c</fullName>
    <label>Gift Designation2 Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GiftDesignation2Amount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>