force-app/main/default/objects/ssot__GiftEntry__dlm/fields/ssot__GiftDesignation2Id__c.field-meta.xml
<CustomField>
    <fullName>ssot__GiftDesignation2Id__c</fullName>
    <label>Gift Designation2</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GiftDesignation2Id</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>