force-app/main/default/objects/ssot__GiftEntry__dlm/fields/ssot__GiftDesignation3Amount__c.field-meta.xml
<CustomField>
    <fullName>ssot__GiftDesignation3Amount__c</fullName>
    <label>Gift Designation3 Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GiftDesignation3Amount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>