force-app/main/default/objects/ssot__GiftEntry__dlm/fields/ssot__GiftEntry_CampaignId_map_Campaign_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__GiftEntry_CampaignId_map_Campaign_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GiftEntry_CampaignId_map_Campaign_Id_N_1</label>
    <referenceTo>ssot__Campaign__dlm</referenceTo>
    <relationshipLabel>GiftEntry_CampaignId_map_Campaign_Id_N_1</relationshipLabel>
    <relationshipName>GiftEntry_CampaignId_map_Campaign_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>