force-app/main/default/objects/ssot__GiftEntry__dlm/fields/ssot__GiftProcessingResult__c.field-meta.xml
<CustomField>
    <fullName>ssot__GiftProcessingResult__c</fullName>
    <label>Gift Processing Result</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GiftProcessingResult</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>