force-app/main/default/objects/ssot__GiftEntry__dlm/fields/ssot__GiftTransactionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__GiftTransactionId__c</fullName>
    <label>GiftTransaction</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GiftTransactionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>