force-app/main/default/objects/ssot__GiftEntry__dlm/fields/ssot__GiftType__c.field-meta.xml
<CustomField>
    <fullName>ssot__GiftType__c</fullName>
    <label>Gift Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GiftType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>