force-app/main/default/objects/ssot__GiftEntry__dlm/fields/ssot__HomePhone__c.field-meta.xml
<CustomField>
    <fullName>ssot__HomePhone__c</fullName>
    <label>Home Phone</label>
    <length>40</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HomePhone</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>