force-app/main/default/objects/ssot__GiftEntry__dlm/fields/ssot__IsSetAsDefault__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsSetAsDefault__c</fullName>
    <label>Is Set As Default</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsSetAsDefault</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>