force-app/main/default/objects/ssot__GiftEntry__dlm/fields/ssot__MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>ssot__MobilePhone__c</fullName>
    <label>Mobile Phone</label>
    <length>40</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MobilePhone</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>