force-app/main/default/objects/ssot__GiftEntry__dlm/fields/ssot__PaymentMethodId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PaymentMethodId__c</fullName>
    <label>Payment Method</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PaymentMethodId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>