force-app/main/default/objects/ssot__GiftEntry__dlm/fields/ssot__PostalCodeText__c.field-meta.xml
<CustomField>
    <fullName>ssot__PostalCodeText__c</fullName>
    <label>Postal Code</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PostalCodeText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>