force-app/main/default/objects/ssot__GiftEntry__dlm/fields/ssot__rel_1697761239188_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761239188_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GiftEntry_GiftCommitmentId_map_GiftC_rel</label>
    <referenceTo>ssot__GiftCommitment__dlm</referenceTo>
    <relationshipLabel>GiftEntry_GiftCommitmentId_map_GiftC_rel</relationshipLabel>
    <relationshipName>rel_1697761239188_end</relationshipName>
    <type>Lookup</type>
</CustomField>