force-app/main/default/objects/ssot__GiftEntry__dlm/fields/ssot__rel_1697761239380_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761239380_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GiftEntry_GiftDesignation3Id_map_Gif_rel</label>
    <referenceTo>ssot__GiftDesignation__dlm</referenceTo>
    <relationshipLabel>GiftEntry_GiftDesignation3Id_map_Gif_rel</relationshipLabel>
    <relationshipName>rel_1697761239380_end</relationshipName>
    <type>Lookup</type>
</CustomField>