force-app/main/default/objects/ssot__GiftEntry__dlm/fields/ssot__SoftCreditInformationDescription__c.field-meta.xml
<CustomField>
    <fullName>ssot__SoftCreditInformationDescription__c</fullName>
    <label>Soft Credit Information</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SoftCreditInformationDescription</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>