force-app/main/default/objects/ssot__GiftEntry__dlm/fields/ssot__StreetName__c.field-meta.xml
<CustomField>
    <fullName>ssot__StreetName__c</fullName>
    <label>StreetName</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StreetName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>