force-app/main/default/objects/ssot__GiftEntry__dlm/fields/ssot__TotalTransactionFeeAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalTransactionFeeAmount__c</fullName>
    <label>Total Transaction Fee Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalTransactionFeeAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>